# tierII_emails

./: .env.example  .gitignore  README.md  config.py  conftest.py  debug_auth.py  debug_decode.py  debug_import.py  debug_message.py  debug_name.py  debug_special_chars.py  email_campaign.py  email_config.json  oauth_setup_guide.py  permissions.ps1  pyproject.toml  pytest.ini  rate_config.json  requirements-dev.txt  requirements.txt  test_campaign_google.py  test_campaign_microsoft.py  test_csv_reader.py  test_minimal.py  tier_i_tier_ii_emails_verified.csv
.github/workflows/: ci.yml
data/config/: email_config.json
data/contacts/: tier_i_tier_ii_emails_verified.csv
data/test/: testdata.csv
docs/: MAILERSEND_IMAGE_GUIDE.md  README.md  blast-approval-feature.md  quick-start-guide.md  quick-start.md  technical-documentation.md  user-documentation.md
docs/api/: authentication.md  configuration.md  mailersend.md
docs/architecture/: data-flow.md  extensibility.md  overview.md
docs/compliance/: README.md  privacy.md  security.md
docs/dynamic/: environment_variable_migration.md  gmail_smtp_integration.md  (+1 more)
scripts/: setup_oauth.py  t_csv_reader.py  t_email_settings.py  t_oauth_smtp.py
src/: __init__.py  email_campaign.py  main.py
src/auth/: __init__.py  (+7 more)
templates/: email_template.html  report_template.html  sample_template.html  wholesale_template.html
tests/: __init__.py  conftest.py  run_config_tests.py  test_csv_reader.py  test_env_loading.py  test_json_reader_attachments.py  test_main.py  test_main_attachments.py  test_pydantic.py  test_report_generator.py
(+46 files in other folders)
