[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HPC-email-campaign"
version = "1.0.0"
description = "Email campaign management system using MailerSend API"
authors = [
    {name = "Luke Edwards", email = "luke@honestpharmco.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [`
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "mailersend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
email-campaign = "src.main:main"

[tool.setuptools]
packages = ["src", "src.utils"]

